# posttrain-garden

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design.md
examples/: regrets.jsonl
src/posttrain_garden/: __init__.py  cli.py  config.py  eval.py  export.py  jsonl.py  paths.py  pipeline.py  samples.py  schema.py  train.py
src/posttrain_garden/commands/: __init__.py
tests/: test_cli.py  test_config.py  test_pipeline.py  test_train.py
