[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "posttrain-garden"
version = "0.1.0"
description = "Local-first regret-to-preference post-training workbench for small open models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "PostTrain Garden contributors"}]
keywords = ["post-training", "alignment", "sft", "dpo", "lora", "preference-data"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
train = [
  "datasets>=2.19",
  "peft>=0.11",
  "transformers>=4.43",
  "trl>=0.9",
]
dev = [
  "build>=1.2",
]

[project.scripts]
ptg = "posttrain_garden.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
posttrain_garden = ["py.typed"]
